# big2

./: .gitignore  .pre-commit-config.yaml  README.md  hyperparam_search.py  nn.py  play.py  pyproject.toml  train.py
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
big2/: __init__.py  api.md  llm_game.py  llm_game_example.py  nn.py  play.py  test_greedy_vs_smart.py  train.py  train_helpers.py  train_mc_cfr.py  train_ppo.py  train_ppo_config.py  train_q_network.py  train_reinforce.py  training_config.json  training_monitor.py  training_stats.json  web_api.py  web_server.py
big2/game_server/: IMPLEMENTATION.md  README.md  RPC.md  __init__.py  auth.py  export_openapi.py  game_logic.py  main.py  models.py  openapi.json  run_server.sh  store.py  test_api.py
big2/monitor/: app.js  index.html  style.css
big2/simulator/: cards.py  env.py  generate_hands.py  greedy_strategy.py  hand.py  selfplay.py  smart_strategy.py
big2/simulator/tests/: test_cards.py  test_env.py  test_generate_hands.py  test_nn_flexible.py
big2/training_run_dump/: curriculum_config.json  ppo_config.json  training_run_dump.json
big2/web/: app.js  index.html  style.css
simulator/: __init__.py  card.py  cards.py  env.py  generate_hands.py  selfplay.py
simulator/test/: test_card.py
simulator/tests/: test_cards.py  test_env.py  test_generate_hands.py
